Tentando resolver cache e layout shift

--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ li p{
     max-width:290px;
     margin:0 auto;}
 .tags{
-    width:1200px;
     max-width:100%;
     margin:20px auto;
     display:flex;
